--- a/vercel.json
+++ b/vercel.json
@@ -1,37 +1,13 @@
 {
-    "builds": [
-        {
-            "src": "code/main.py",
-            "use": "@vercel/python"
+    "functions": {
+        "api/main.py": {
+            "runtime": "@vercel/python@3.1.30"
         }
-    ],
+    },
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "code/main.py"
-        }
-    ],
-    "headers": [
-        {
-            "source": "/(.*)",
-            "headers": [
-                {
-                    "key": "Access-Control-Allow-Credentials",
-                    "value": "true"
-                },
-                {
-                    "key": "Access-Control-Allow-Origin",
-                    "value": "*"
-                },
-                {
-                    "key": "Access-Control-Allow-Methods",
-                    "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
-                },
-                {
-                    "key": "Access-Control-Allow-Headers",
-                    "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
-                }
-            ]
+            "dest": "run.py"
         }
     ]
 }
