⚗️ readme_and_cors Experimental fix

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "run.py"
+            "dest": "api/main.py"
         }
     ]
 }
